# persian

./: README.md  requirements.txt  schema_protocol.py  setup.cfg
experiments/: boundary_double_descent.py  datafree.py  datafree_graph.py  global_h0_regularization.py  schema_benchmark.py  tdd.py
experiments_notebooks/: helpers.py  submission_investigating_cnn_weights_with_giotto_vectorization_SRV.ipynb  topology_of_winning_lottery_tickets.ipynb  topology_of_winning_lottery_tickets_dnn.ipynb
persian/: filtration.py  main.py  main_grid.py  schema_expt2.py  schema_protocol.py  schema_tda.py  trainer.py  vectorization.py
persian/experiments/mnist_sample/: schemas  train_and_save.py
scripts/: Makefile  featspace_to_persistence.py  launch_featspace_to_persistence.sh  launch_subset_featspace_to_persistence.sh  minmax.pyx  setup.py  subset_featspace_to_persistence.py
src/persian/: config.py  debug.py  global_h0_regularizer.py  layer_silhouette.py  main.py  schema_expt2.py  torchize.py  trainer.py
src/persian/errors/: __init__.py  flags_incompatible.py  value_flag_unknown.py
src/persian/models/: model_mcnn.py  model_resnet18k.py
src/persian/schemas/: cnn_boundary.py  cnn_simple.py  prediction_pers.py  schema.py  torch.py  torch_dataset.py  torch_dataset_cnn.py  torch_zooset.py
tests/: test__persian_silhouette.py  test__schema_training.py
