[metadata]
name = persian-marek094
version = 0.0.1
author = Marek Cerny
author_email = me@marekcerny.com
description = Small topology and neural networks package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marek094/persian
project_urls =
    Bug Tracker = https://github.com/marek094/persian/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src